# workflow-extra

./: .gitignore  CMakeLists.txt  Readme.md
example/: CMakeLists.txt  GoPipeExample.cpp  LatchExample.cc  PipeRedisExample.cc  QpsPoolExample.cc  RefPtrExample.cpp
include/: GoPipe.h  Latch.h  PipeRedisMessage.h  QpsPool.h  RefPtr.h  TaskFactory.h  WEQpsPool.h  WETaskFactory.h
src/: CMakeLists.txt  PipeRedisMessage.cc  PipeRedisTaskImpl.cc  QpsPool.cc  WEQpsPool.cc
tools/: CMakeLists.txt  wfdig.cpp
